fix: dropdown menu and hamburger position on mobile

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -7,7 +7,7 @@ input#nav-toggle:checked ~ label#hide-button {
   @apply flex lg:hidden;
 }
 
-input#nav-toggle:checked ~ div > #nav-menu {
+input#nav-toggle:checked ~ div[class*="order-4"] #nav-menu {
   @apply block lg:flex;
 }
 .header {
@@ -70,7 +70,7 @@ input#nav-toggle:checked ~ div > #nav-menu {
 }
 
 .nav-dropdown-list {
-  @apply z-10 mx-auto ml-1 mt-4 max-w-[300px] rounded-lg border-0 border-solid  border-white/10 bg-primary/5 px-4 py-3 hidden shadow-sm duration-300  lg:mt-0 lg:border lg:bg-surface lg:shadow-[0_0.9rem_1.56rem_rgb(0,0,0,0.1)];
+  @apply z-10 mx-auto ml-1 mt-4 max-w-[300px] rounded-lg border-0 border-solid border-white/10 bg-surface px-4 py-3 hidden shadow-sm duration-300 lg:mt-0 lg:border lg:bg-surface lg:shadow-[0_0.9rem_1.56rem_rgb(0,0,0,0.1)];
   @apply mx-auto hidden duration-300 lg:invisible lg:absolute lg:block lg:h-auto lg:w-[13.5rem] lg:opacity-0 lg:group-hover:visible lg:group-hover:opacity-100;
 }
 
